--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -138,9 +138,9 @@ h3 {
 
 .btn {
   padding: 10px 20px;
-  border: 1px solid #000;
+  border: none;
   border-radius: 5px;
-  background: #000;
+  background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   color: #fff;
   font-size: 16px;
   font-weight: 700;
@@ -238,19 +238,19 @@ h3 {
 }
 
 .status-new {
-  background-color: green;
+  background-color: #98e2c6;
   color: #fff;
   border-radius: 10px;
 }
 
 .status-open {
-  background-color: steelblue;
+  background-color: #f9c0c0;
   color: #fff;
   border-radius: 10px;
 }
 
 .status-closed {
-  background-color: darkred;
+  background-color: #f3f3b1;
   color: #fff;
   border-radius: 10px;
 }
